--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
 	},
 	"devDependencies": {
 		"@types/core-js": "^0.9.42",
-		"core-js": "^2.5.1",
 		"css-loader": "^0.28.5",
 		"friendly-errors-webpack-plugin": "^1.6.1",
 		"less": "^2.7.2",
@@ -17,5 +16,8 @@
 		"uglifyjs-webpack-plugin": "^0.4.6",
 		"webpack": "^3.5.5",
 		"webpack-dev-server": "^2.7.1"
+	},
+	"dependencies": {
+		"rimraf": "^2.6.2"
 	}
 }
