--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"less": "^2.7.2",
 		"less-loader": "^4.0.5",
 		"preact": "^8.2.7",
+		"redux": "^3.7.2",
 		"style-loader": "^0.18.2",
 		"ts-loader": "^2.3.3",
 		"typescript": "next",
