--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 		"webpack-dev-server": "^2.7.1"
 	},
 	"dependencies": {
-		"rimraf": "^2.6.2"
+		"preact-redux": "^2.0.3",
+		"react-redux": "^5.0.6",
+		"rimraf": "^2.6.2",
+		"tsconfig-paths-webpack-plugin": "^2.0.0"
 	}
 }
