Moved a bunch of folders + files into App/Core/*

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
 		"noImplicitAny": true,
 		"paths": {
 			"@base": ["Base/Core"],
-			"@core/*": ["AppCore/*"],
+			"@core/*": ["App/Core/*"],
 			"@components/*": ["App/Components/*"],
 			"@state/*": ["App/State/*"],
 			"@styles/*": ["App/Styles/*"]
